--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+node_modules
 # Distribution / packaging
 bin/
 build/
@@ -49,3 +49,4 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
+db.sqlite3
